plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '6.0.0'
    id "org.sonarqube" version "2.8"
    id 'jacoco'
}

version '8.0'

/*sourceCompatibility = JavaVersion.VERSION_14
targetCompatibility = JavaVersion.VERSION_14*/

repositories {
    mavenCentral()
    jcenter()
    maven { url 'https://www.jitpack.io' }
}

dependencies {
    compileOnly 'com.github.Anuken.Arc:arc-core:-SNAPSHOT'
    compileOnly 'com.github.Anuken.Mindustry:core:-SNAPSHOT'
    implementation 'com.github.PersonTheCat:hjson-java:master'
    implementation 'de.svenkubiak:jBCrypt:0.4.1'
    implementation('net.dv8tion:JDA:4.1.1_141') {
        exclude module: 'opus-java'
    }
    implementation 'org.apache.maven:maven-artifact:3.6.3'
    implementation 'org.jsoup:jsoup:1.13.1'
    implementation 'org.slf4j:slf4j-nop:1.7.30'
    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'

    testImplementation 'com.github.Anuken.Mindustry:server:-SNAPSHOT'
    testImplementation group: 'junit', name: 'junit', version: '4.13'
    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
    testImplementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'

}

jar {
    enabled = false // disable original task
    dependsOn(shadowJar) // add new task
}

shadowJar {
    archiveFileName = "${project.archivesBaseName}.jar" // remove jar classifier and version
    minimize() // remove unused classes
}

sourceSets{
    test{
        resources{
            srcDir "src/main/resources"
        }
    }
}

compileJava {
    options.encoding = "UTF-8"
    //options.compilerArgs += ["--enable-preview"]
}

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

test {
    testLogging.showStandardStreams = true
    //jvmArgs '--enable-preview'
}

sonarqube {
    properties {
        property "sonar.projectKey", "Kieaer_Essentials"
        property "sonar.organization", "kieaer"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.login", "02f72b2b7fe443b0bc962c878c00294ef87a01dd"
    }
}

jacocoTestReport{
    reports{
        xml.enabled = true
    }
}